# swc-plugin-fetch-replace

./: .gitignore  Cargo.toml  README.md  package.json
examples/jest/: .gitignore  .swcrc  index.test.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/minimum/: .swcrc  index.ts  package.json  pnpm-lock.yaml
src/: lib.rs
